--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+    <h1>Welcome to Flexbox and Grid Layout</h1>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    </header>
 
-    <div class="flex-container">
-        <div class="flex-item">Flex Item</div>
+    <div class = "grid-container">
+         <div class="grid-item">Item 1</div>
+          <div class="grid-item">Item 2</div>
     </div>
 
-    <div class="grid-container">
-        <div class="grid-item">Grid Item</div>
-    </div>
-
+    <footer>
+        <p>&copy; 2024 Flexbox and Grid Layout</p>
+    </footer>
 </body>
 </html>
